tests/snapshots/integration__integration_tests__approval_pty__alias_approval_decline.snap
---
source: tests/integration_tests/approval_pty.rs
expression: "&output"
---
[33m▲[39m [33m[1morigin[22m needs approval to execute [1m1[22m command:[39m
[2m○[22m alias [1mdeploy[22m:
[107m [0m [2m[0m[2m[34mtouch[0m[2m alias-ran[0m

[36m❯[39m [36mAllow and remember? [1m[y/N][22m[39m n
