tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_accept.snap
---
source: tests/integration_tests/approval_pty.rs
expression: "&output"
---
[33m▲[39m [33m[1mrepo[22m needs approval to execute [1m1[22m command:[39m
[2m○[22m pre-start:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command'[0m

[36m❯[39m [36mAllow and remember? [1m[y/N][22m[39m y
[36m◎[39m [36mRunning pre-start: project @ [1m_REPO_.test-approve[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command'[0m
[0mtest command
[32m✓[39m [32mCreated branch [1mtest-approve[22m from [1mmain[22m and worktree @ [1m_REPO_.test-approve[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[33m▲[39m [33mCannot change directory — ran [BIN][22m; shell integration wraps [1mwt[22m[39m
[2m↳[22m [2mTo change directory, run [4mwt switch test-approve[24m[22m
