tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_accept.snap
---
source: tests/integration_tests/approval_pty.rs
expression: "&output"
---
[33m▲[39m [33m[1mrepo[22m needs approval to execute [1m2[22m commands:[39m
[2m○[22m pre-start [1mfirst[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'First command'[0m
[2m○[22m pre-start [1mthird[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Third command'[0m

[36m❯[39m [36mAllow and remember? [1m[y/N][22m[39m y
[36m◎[39m [36mRunning pre-start: [1mfirst[22m (project) @ [1m_REPO_.test-mixed-accept[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'First command'[0m
[0mFirst command
[36m◎[39m [36mRunning pre-start: [1msecond[22m (project) @ [1m_REPO_.test-mixed-accept[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Second command'[0m
[0mSecond command
[36m◎[39m [36mRunning pre-start: [1mthird[22m (project) @ [1m_REPO_.test-mixed-accept[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Third command'[0m
[0mThird command
[32m✓[39m [32mCreated branch [1mtest-mixed-accept[22m from [1mmain[22m and worktree @ [1m_REPO_.test-mixed-accept[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[33m▲[39m [33mCannot change directory — ran [BIN][22m; shell integration wraps [1mwt[22m[39m
[2m↳[22m [2mTo change directory, run [4mwt switch test-mixed-accept[24m[22m
