tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_decline.snap
---
source: tests/integration_tests/approval_pty.rs
expression: "&output"
---
[33m▲[39m [33m[1mrepo[22m needs approval to execute [1m2[22m commands:[39m
[2m○[22m pre-start [1mfirst[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'First command'
[2m○[22m pre-start [1mthird[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Third command'

[36m❯[39m [36mAllow and remember? [1m[y/N][22m[39m n
[2m○[22m Commands declined, continuing worktree creation without hooks
[32m✓[39m [32mCreated branch [1mtest-mixed-decline[22m from [1mmain[22m and worktree @ [1m_REPO_.test-mixed-decline[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[33m▲[39m [33mCannot change directory — ran [BIN][22m; shell integration wraps [1mwt[22m[39m
[2m↳[22m [2mTo change directory, run [4mwt switch test-mixed-decline[24m[22m
