tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_named_commands.snap
---
source: tests/integration_tests/approval_pty.rs
expression: "&output"
---
[33m▲[39m [33m[1mrepo[22m needs approval to execute [1m3[22m commands:[39m
[2m○[22m pre-start [1minstall[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Installing dependencies...'[0m
[2m○[22m pre-start [1mbuild[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Building project...'[0m
[2m○[22m pre-start [1mtest[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Running tests...'[0m

[36m❯[39m [36mAllow and remember? [1m[y/N][22m[39m y
[36m◎[39m [36mRunning pre-start: [1minstall[22m (project) @ [1m_REPO_.test-named[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Installing dependencies...'[0m
[0mInstalling dependencies...
[36m◎[39m [36mRunning pre-start: [1mbuild[22m (project) @ [1m_REPO_.test-named[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Building project...'[0m
[0mBuilding project...
[36m◎[39m [36mRunning pre-start: [1mtest[22m (project) @ [1m_REPO_.test-named[22m[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Running tests...'[0m
[0mRunning tests...
[32m✓[39m [32mCreated branch [1mtest-named[22m from [1mmain[22m and worktree @ [1m_REPO_.test-named[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[33m▲[39m [33mCannot change directory — ran [BIN][22m; shell integration wraps [1mwt[22m[39m
[2m↳[22m [2mTo change directory, run [4mwt switch test-named[24m[22m
