tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_prune_decline.snap
---
source: tests/integration_tests/approval_pty.rs
expression: "&output"
---
[33m▲[39m [33m[1mrepo[22m needs approval to execute [1m1[22m command:[39m
[2m○[22m pre-remove:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'pre-remove hook'[0m[2m

[36m❯[39m [36mAllow and remember? [1m[y/N][22m[39m n
[2m○[22m Commands declined, continuing removal without hooks
[36m◎[39m [36mRemoving [1mto-prune[22m worktree...[39m
[1G[2K[32m✓[39m [32mRemoved [1mto-prune[22m worktree & branch (same commit as [1mmain[22m,[39m [2m_[22m[32m)[39m [90m(4 files · [BYTES] B[39m[90m)[39m
[32m✓[39m [32mPruned 1 worktree & branch[39m
